Fix subreddits not showing sidebars

--- a/static/style.css
+++ b/static/style.css
@@ -477,7 +477,7 @@ input[type="submit"]:hover { color: var(--accent); }
 	overflow: hidden;
 	white-space: nowrap;
 	text-align: center;
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.6);
 	color: white;
 	grid-area: 1 / 1 / 2 / 2;
 	padding: 5px;
